MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/Task_Management__mdt.object-meta.xml
<CustomObject>
    <description>Used for maintaining task SLA for different type of Objects.</description>
    <label>Task Management</label>
    <pluralLabel>Task Managements</pluralLabel>
</CustomObject>