MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>150</length>
    <type>Text</type>
</CustomField>