MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/fields/MaxNoOfTasks__c.field-meta.xml
<CustomField>
    <fullName>MaxNoOfTasks__c</fullName>
    <label>MaxNoOfTasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>