MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>