MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>