MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/fields/SLATimeType__c.field-meta.xml
<CustomField>
    <fullName>SLATimeType__c</fullName>
    <label>SLATimeType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>seconds</fullName>
                <default>true</default>
                <label>seconds</label>
            </value>
            <value>
                <fullName>minutes</fullName>
            </value>
            <value>
                <fullName>hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>