MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>150</length>
    <type>Text</type>
</CustomField>