MODON MRE BPDEV/force-app/main/default/objects/Task_Management__mdt/listViews/ALL_ALL.listView-meta.xml
<ListView>
    <fullName>ALL_ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Category__c</columns>
    <columns>MaxNoOfTasks__c</columns>
    <columns>Milestone__c</columns>
    <columns>ObjectName__c</columns>
    <columns>SLA__c</columns>
    <columns>SLATimeType__c</columns>
    <columns>Subcategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL_ALL</label>
</ListView>